Fixing the timeline display on phones, and aligning with work page

--- a/css/timeline.css
+++ b/css/timeline.css
@@ -1,3 +1,7 @@
+.override-ul-ol {
+    margin-left: 0px;
+}
+
 .row {
     margin-right: -15px;
     margin-left: -15px;
@@ -43,9 +47,9 @@
 .timeline>li .timeline-panel {
     float: right;
     position: relative;
-    width: 80%;
-    left: 40px;
-    padding: 0 20px 0 120px;
+    width: 60%;
+    left: 0px;
+    padding: 0  0px 0 120px;
     text-align: left;
 }
 
@@ -70,7 +74,7 @@
     width: 100px;
     height: 100px;
     margin-left: 0;
-    border: 7px solid #f1f1f1;
+    /* border: 7px solid #f1f1f1; */
     border-radius: 100%;
     text-align: center;
     color: #fff;
@@ -120,71 +124,15 @@
 .timeline .timeline-body>ul {
     margin-bottom: 0;
 }
-/* 
-@media(min-width:768px) {
-
-    .timeline>li {
-        margin-bottom: 100px;
-        min-height: 100px;
-        position: relative;
-    } 
-
-    /* .timeline>li .timeline-panel {
-        padding: 0 20px 0 115px;
-    } 
-
-    .timeline>li .timeline-image {
-        width: 100px;
-        height: 100px;
-    }
+ 
+@media(min-width:420px) {
+    .timeline> li .timeline-panel {
+        width: 70%;
+    }   
 }
 
-@media(min-width:992px) {
-    .timeline>li {
-        min-height: 150px;
-    }
-
-    .timeline>li .timeline-panel {
-        padding: 0 100px 20px;
-    }
-
-    .timeline>li .timeline-image {
-        width: 150px;
-        height: 150px;
-        margin-left: -75px;
-    }
-
-    .timeline>li .timeline-image h4 {
-        margin-top: 30px;
-        font-size: 18px;
-        line-height: 26px;
-    }
-
-    .timeline>li.timeline-inverted>.timeline-panel {
-        padding: 0 20px 20px;
-    }
+@media(min-width:700px) {
+    .timeline> li .timeline-panel {
+        width: 80%;
+    }   
 }
-
-@media(min-width:1200px) {
-    .timeline>li {
-        min-height: 170px;
-    }
-
-    .timeline>li .timeline-panel {
-        padding: 0 20px 20px 100px;
-    }
-
-    .timeline>li .timeline-image {
-        width: 170px;
-        height: 170px;
-        margin-left: -85px;
-    }
-
-    .timeline>li .timeline-image h4 {
-        margin-top: 40px;
-    }
-
-    .timeline>li.timeline-inverted>.timeline-panel {
-        padding: 0 100px 20px 20px;
-    }
-} */
